added post full observability

--- a/_includes/floating_index.html
+++ b/_includes/floating_index.html
@@ -30,9 +30,9 @@ function myFunction() {
   This is my DIV element.
 </div> -->
   <div class="indexsidebar" id="post-contents">
-
     <!-- <h2>Contents</h2> -->
-    <ol>
+    {{page.table-of-contents}}
+    <!-- <ol>
       <li><a href="#introduction">Introduction</a></li>
       <li><a href="#about-prometheus">About Prometheus</a></li>
       <li><a href="#to-do-overview">To-Do overview</a></li>
@@ -41,6 +41,5 @@ function myFunction() {
       <li><a href="#enabling-prometheus">Enabling Prometheus</a></li>
       <li><a href="#enabling-grafana">Enabling Grafana</a></li>
       <li><a href="#final-words">Final words</a></li>
-    </ol>
-       
+    </ol>  -->
   </div>
