new camel designer post

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,7 +1,7 @@
   <div class="profilesidebar-box">
   <div class="profilesidebar">
     <h4>Bruno Meseguer</h4>
-    <p>Specialist Solution Architect @ Red Hat</p>
+    <p>Technical Marketing Manager @ Red Hat</p>
 
 	<ul>
 		                <!-- Social icons from Font Awesome, if enabled -->
